# borzoi

./: Cargo.toml  README.md  derivation.nix  flake.nix  package.nix  result
migrations/2023-05-17-081542_tetra-db-init/: down.sql  up.sql
migrations/2023-05-21-193705_add-json/: down.sql  up.sql
migrations/2024-06-14-103248_add-tetra-decoder-failed-slots/: down.sql  up.sql
migrations/2024-06-25-090645_add-time-index/: down.sql  up.sql
migrations/2024-07-29-125358_tetra-decoder-packet-api/: down.sql  up.sql
migrations/2024-07-29-173214_tetra-decoder-packet-api-add-protocol-version/: down.sql  up.sql
migrations/2024-08-06-155434_tetra-decoder-packet-api-change-key-to-enum/: down.sql  up.sql
migrations/2024-08-20-201104_tetra-failed-slots-use-json-in-data/: down.sql  up.sql
nixos-module/: default.nix
src/: main.rs  models.rs  schema.rs  structs.rs
src/filter/: mod.rs
src/routes/: mod.rs
